--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,5 @@ name = "sem"
 version = "0.1.0"
 authors = ["adjivas <adjivas@users.noreply.github.com>"]
 description = "IPC semaphore"
-license = "gpl-3.0"
+license = "GPL-3.0"
 repository = "https://github.com/adjivas/sem"
